infrastructure/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleet-ingress-traefik
  namespace: fleet-management
spec:
  ingressClassName: traefik
  rules:
    - host: api.fleet.local
      http:
        paths:
          - path: /api/vehicules
            pathType: Prefix
            backend:
              service:
                name: vehicule-service
                port:
                  number: 4000
          - path: /api/conducteurs
            pathType: Prefix
            backend:
              service:
                name: conducteur-service
                port:
                  number: 3000
          - path: /api/maintenance
            pathType: Prefix
            backend:
              service:
                name: maintenance-service
                port:
                  number: 8000
          - path: /api/evenements
            pathType: Prefix
            backend:
              service:
                name: evenement-service
                port:
                  number: 8000
          - path: /api/localisation
            pathType: Prefix
            backend:
              service:
                name: localisation-service
                port:
                  number: 50051
